Update backend stub to version 3.1
