# backendStub/controllers/Owner.js
@@ -14,6 +14,18 @@ module.exports.addMenu = function addMenu (req, res, next) {
     });
 };
 
+module.exports.addMenuItem = function addMenuItem (req, res, next) {
+  var menuID = req.swagger.params['menuID'].value;
+  var body = req.swagger.params['body'].value;
+  Owner.addMenuItem(menuID,body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.configureRestaurant = function configureRestaurant (req, res, next) {
   var body = req.swagger.params['body'].value;
   Owner.configureRestaurant(body)
@@ -36,6 +48,29 @@ module.exports.createOwner = function createOwner (req, res, next) {
     });
 };
 
+module.exports.deleteMenu = function deleteMenu (req, res, next) {
+  var menuID = req.swagger.params['menuID'].value;
+  Owner.deleteMenu(menuID)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.deleteMenuItem = function deleteMenuItem (req, res, next) {
+  var menuID = req.swagger.params['menuID'].value;
+  var menuItemID = req.swagger.params['menuItemID'].value;
+  Owner.deleteMenuItem(menuID,menuItemID)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.editMenu = function editMenu (req, res, next) {
   var menuID = req.swagger.params['menuID'].value;
   var body = req.swagger.params['body'].value;
@@ -48,9 +83,11 @@ module.exports.editMenu = function editMenu (req, res, next) {
     });
 };
 
-module.exports.getMenuOwner = function getMenuOwner (req, res, next) {
+module.exports.editMenuItem = function editMenuItem (req, res, next) {
   var menuID = req.swagger.params['menuID'].value;
-  Owner.getMenuOwner(menuID)
+  var menuItemID = req.swagger.params['menuItemID'].value;
+  var body = req.swagger.params['body'].value;
+  Owner.editMenuItem(menuID,menuItemID,body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -61,6 +98,16 @@ module.exports.getMenuOwner = function getMenuOwner (req, res, next) {
 
 module.exports.getOwnMenus = function getOwnMenus (req, res, next) {
   Owner.getOwnMenus()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getRestaurant = function getRestaurant (req, res, next) {
+  Owner.getRestaurant()
     .then(function (response) {
       utils.writeJson(res, response);
     })
